--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=spawn
-spring.datasource.url=jdbc:mysql://localhost:3306/localhost
-spring.datasource.username=
+spring.datasource.url=jdbc:mysql://localhost:3306/spawn_db
+spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
