--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-#spring.security.oauth2.client.registration.google.client-id=822760465266-1dunhm4jgrcg17137rfjo2idu5qefchk.apps.googleusercontent.com
-#spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.client-id=822760465266-1dunhm4jgrcg17137rfjo2idu5qefchk.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
