--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.12.5</version>
 		</dependency>
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.25.27</version>
+		</dependency>
     </dependencies>
 	<repositories>
 		<repository>
