--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,10 @@
 			<artifactId>s3</artifactId>
 			<version>2.25.27</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
     </dependencies>
 	<repositories>
 		<repository>
