--- a/.github/workflows/syntax-check.yml
+++ b/.github/workflows/syntax-check.yml
@@ -7,7 +7,9 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  # 1. Compilation Check (blocks merge if compilation fails)
+  compile-check:
+    name: Compilation Check
     runs-on: ubuntu-latest
 
     steps:
@@ -33,17 +35,40 @@ jobs:
       - name: Compile tests (syntax check for test files)
         run: mvn test-compile -DskipTests
 
+  # 2. Test Check (does not block merge even if tests fail)
+  test-check:
+    name: Test Suite Check
+    runs-on: ubuntu-latest
+    needs: compile-check  # Ensures tests run only if compilation succeeds
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
+
       - name: Run test suite
-        run: mvn test
+        run: mvn test || true  # Prevent workflow failure if tests fail
 
       - name: Publish Test Results
         uses: dorny/test-reporter@v1
-        if: always()
+        if: always()  # Always run this even if tests fail
         with:
           name: JUnit Tests
           path: target/surefire-reports/*.xml
           reporter: java-junit
-          fail-on-error: false  # Prevents job from failing even if tests fail
+          fail-on-error: false  # Allow merge even if tests fail
 
       - name: Upload Test Reports
         uses: actions/upload-artifact@v4
