--- a/.github/workflows/syntax-check.yml
+++ b/.github/workflows/syntax-check.yml
@@ -1,13 +1,20 @@
-name: Spring Boot Build and Test
+name: Compilation + Test Reporting
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main  # Only trigger on pushes to main
+  pull_request:
+    branches:
+      - '**'  # Trigger on all PRs
 
 permissions:
   checks: write
   contents: read
 
 jobs:
-  build-and-test:
+  compilation-check:
+    name: Compilation Check
     runs-on: ubuntu-latest
 
     steps:
@@ -27,12 +34,33 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
 
-      # Compilation Check
       - name: Compile the project (syntax check)
         run: mvn clean compile -DskipTests
 
       - name: Compile tests (syntax check for test files)
         run: mvn test-compile -DskipTests
+
+  test-suite:
+    name: Test Suite Check
+    runs-on: ubuntu-latest
+    needs: compilation-check  # Only run tests if compilation succeeds
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
 
       - name: Run test suite
         run: mvn test
@@ -44,7 +72,7 @@ jobs:
           name: JUnit Tests
           path: target/surefire-reports/*.xml
           reporter: java-junit
-          fail-on-error: false
+          fail-on-error: false  # Test failures won't block merges
 
       - name: Upload Test Reports
         uses: actions/upload-artifact@v4
