--- a/.github/workflows/syntax-check.yml
+++ b/.github/workflows/syntax-check.yml
@@ -1,12 +1,12 @@
-name: Compilation + Test Reporting
+name: Spring Boot CI
 
 on:
   push:
     branches:
-      - main  # Only trigger on pushes to main
+      - main
   pull_request:
     branches:
-      - '**'  # Trigger on all PRs
+      - '**'
 
 permissions:
   checks: write
@@ -43,7 +43,7 @@ jobs:
   test-suite:
     name: Test Suite Check
     runs-on: ubuntu-latest
-    needs: compilation-check  # Only run tests if compilation succeeds
+    needs: compilation-check
 
     steps:
       - name: Checkout repository
@@ -69,10 +69,10 @@ jobs:
         uses: dorny/test-reporter@v1
         if: always()
         with:
-          name: JUnit Tests
+          name: Test Suite
           path: target/surefire-reports/*.xml
           reporter: java-junit
-          fail-on-error: false  # Test failures won't block merges
+          fail-on-error: false
 
       - name: Upload Test Reports
         uses: actions/upload-artifact@v4
