--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,12 @@ spring.mail.password=${EMAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+# Push Notification Configuration
+# APNS Configuration for iOS
+apns.certificate.path=classpath:certificates/apns-cert.p12
+apns.certificate.password=your_certificate_password
+apns.production=false
+
+# Firebase Configuration for Android
+firebase.config.path=firebase-config.json
