--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,7 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 # Push Notification Configuration
 # APNS Configuration for iOS
-apns.certificate.path=classpath:certificates/apns-cert.p12
-apns.certificate.password=your_certificate_password
+apns.certificate.password=${CERTIFICATE_PASSWORD}
 apns.production=false
 
 # Firebase Configuration for Android
