--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 # Push Notification Configuration
 # APNS Configuration for iOS
 apns.certificate.password=${CERTIFICATE_PASSWORD}
-apns.production=false
+apns.production=true
 
 # Firebase Configuration for Android
 firebase.config.path=firebase-config.json
