--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 # Push Notification Configuration
 # APNS Configuration for iOS
+apns.certificate.path=${APNS_CERTIFICATE}
 apns.certificate.password=${CERTIFICATE_PASSWORD}
 apns.production=true
 
