--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.mail.password=${EMAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+# Push Notification Configuration
+# APNS Configuration for iOS
+apns.certificate.path=${APNS_CERTIFICATE}
+apns.certificate.password=${CERTIFICATE_PASSWORD}
+apns.production=true
+
+# Firebase Configuration for Android
