--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,16 @@
             <artifactId>apns</artifactId>
             <version>1.0.0.Beta6</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.search</groupId>
+            <artifactId>hibernate-search-mapper-orm</artifactId>
+            <version>7.0.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.search</groupId>
+            <artifactId>hibernate-search-backend-lucene</artifactId>
+            <version>7.2.3.Final</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
