--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,7 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 apns.certificate.path=${APNS_CERTIFICATE}
 apns.certificate.password=${CERTIFICATE_PASSWORD}
 apns.production=true
-
-# Firebase Configuration for Android
+# Enable Hibernate Search with Lucene
+spring.jpa.properties.hibernate.search.backend.type=lucene
+spring.jpa.properties.hibernate.search.backend.directory.type=local-filesystem
+spring.jpa.properties.hibernate.search.backend.directory.root=./lucene-indexes
