--- a/pom.xml
+++ b/pom.xml
@@ -97,14 +97,9 @@
             <version>1.0.0.Beta6</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate.search</groupId>
-            <artifactId>hibernate-search-mapper-orm</artifactId>
-            <version>7.0.0.Final</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate.search</groupId>
-            <artifactId>hibernate-search-backend-lucene</artifactId>
-            <version>7.2.3.Final</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.3</version>
         </dependency>
     </dependencies>
     <repositories>
