--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 # APNS Configuration for iOS
 apns.certificate.path=${APNS_CERTIFICATE}
 apns.certificate.password=${CERTIFICATE_PASSWORD}
-apns.production=true
+apns.production=false
 
 # Redis Connection
 spring.data.redis.host=${REDIS_HOST}
