--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 apns.certificate.path=${APNS_CERTIFICATE}
 apns.certificate.password=${CERTIFICATE_PASSWORD}
 apns.production=true
-apns.bundle.id=${APNS_BUNDLE_ID:com.danielagapov.spawn}
+apns.bundle.id=${APNS_BUNDLE_ID}
 
 # Redis Connection
 spring.data.redis.host=${REDIS_HOST}
