--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,15 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>3.2.5</version>
         </dependency>
+        <!-- Flyway for database migrations -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
