--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,8 @@ spring.data.redis.password=${REDIS_PASSWORD}
 spring.cache.type=redis
 
 # Firebase Configuration for Android
+
+# Database Migration Configuration
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
