get all activities for infinite-scroll

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,10 @@ spring.data.redis.port=${REDIS_PORT}
 spring.data.redis.password=${REDIS_PASSWORD}
 spring.cache.type=redis
 
+# Cache Configuration
+spring.cache.redis.time-to-live=3600000
+spring.cache.cache-names=eventById,fullEventById,eventsByOwnerId,feedEvents,filteredFeedEvents,eventsInvitedTo,fullEventsInvitedTo,calendarActivities,allCalendarActivities
+
 # Firebase Configuration for Android
 
 # Database Migration Configuration
