--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,9 @@ apns.certificate.password=${CERTIFICATE_PASSWORD}
 apns.production=true
 apns.bundle.id=${APNS_BUNDLE_ID}
 
+# Google OAuth configuration
+google.client.id=822760465266-hl53d2rku66uk4cljschig9ld0ur57na.apps.googleusercontent.com
+
 # Redis Connection
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
