--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-mysql</artifactId>
         </dependency>
+        <!-- Google API Client Libraries for token verification -->
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>2.4.0</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
