replaced google client id with env var

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ apns.production=true
 apns.bundle.id=${APNS_BUNDLE_ID}
 
 # Google OAuth configuration
-google.client.id=822760465266-hl53d2rku66uk4cljschig9ld0ur57na.apps.googleusercontent.com
+google.client.id=${GOOGLE_CLIENT_ID}
 
 # Redis Connection
 spring.data.redis.host=${REDIS_HOST}
