replace temp algorithm in service class + added more logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,9 @@ apns.bundle.id=${APNS_BUNDLE_ID}
 # Google OAuth configuration
 google.client.id=${GOOGLE_CLIENT_ID}
 
+# Apple OAuth configuration
+apple.client.id=${APPLE_CLIENT_ID}
+
 # Redis Connection
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
