--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,17 @@
             <artifactId>google-api-client</artifactId>
             <version>2.4.0</version>
         </dependency>
+        <!-- JWT and JWK handling for Apple Sign In -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>jwks-rsa</artifactId>
+            <version>0.22.1</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
