Fix S3 issues in config

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -33,6 +33,12 @@ spring.data.redis.password=
 # Disable Flyway for testing
 spring.flyway.enabled=false
 
+# Mock AWS S3 configurations for testing
+AWS_ACCESS_KEY_ID=test-access-key
+AWS_SECRET_ACCESS_KEY=test-secret-key
+CDN_BASE=https://test-cdn.example.com/
+DEFAULT_PFP=https://test-cdn.example.com/default-profile.jpg
+
 # Logging
 logging.level.com.danielagapov.spawn=DEBUG
 logging.level.org.springframework.web=DEBUG 
