--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,6 @@
 spring.application.name=spawn-test
 # H2 in-memory database for testing
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;NON_KEYWORDS=USER
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
@@ -41,4 +41,8 @@ DEFAULT_PFP=https://test-cdn.example.com/default-profile.jpg
 
 # Logging
 logging.level.com.danielagapov.spawn=DEBUG
-logging.level.org.springframework.web=DEBUG 
+logging.level.org.springframework.web=DEBUG
+
+# Disable admin user initialization for tests
+ADMIN_USERNAME=
+ADMIN_PASSWORD= 
