--- a/.github/workflows/repository-validation.yml
+++ b/.github/workflows/repository-validation.yml
@@ -18,21 +18,6 @@ jobs:
     name: Repository Validation
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_PASSWORD: testpassword
-          POSTGRES_USER: testuser
-          POSTGRES_DB: spawn_test
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -53,7 +38,7 @@ jobs:
       - name: Install repository validation dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y postgresql-client ripgrep
+          sudo apt-get install -y ripgrep
 
       - name: Repository Static Analysis
         run: |
@@ -164,30 +149,6 @@ jobs:
             fi
           ' _ {} \;
 
-      - name: Build and Test Repository Layer
-        env:
-          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/spawn_test
-          SPRING_DATASOURCE_USERNAME: testuser
-          SPRING_DATASOURCE_PASSWORD: testpassword
-          SPRING_JPA_HIBERNATE_DDL_AUTO: create-drop
-          SPRING_PROFILES_ACTIVE: test
-        run: |
-          echo "🚀 Building project and running repository tests..."
-          
-          # Compile the project
-          mvn clean compile -DskipTests
-          
-          # Check if repository or persistence test files exist
-          if find src/test/java -name "*Repository*Test.java" -o -name "*Persistence*Test.java" | grep -q "."; then
-            echo "📝 Found repository/persistence tests, running them..."
-            mvn test -Dtest="**/*Repository*Test,**/*Persistence*Test"
-          else
-            echo "📝 No repository/persistence tests found, skipping test execution..."
-            echo "✅ This is expected if you haven't created repository tests yet"
-          fi
-          
-          echo "✅ Repository layer compilation and basic tests completed"
-
       - name: Repository Method Naming Convention Check
         run: |
           echo "🔍 Checking JPA method naming conventions..."
@@ -216,6 +177,12 @@ jobs:
             echo "✅ $1 passed method naming validation"
           ' _ {} \;
 
+      - name: Compile Repository Layer for Validation
+        run: |
+          echo "🚀 Compiling project to validate repository layer..."
+          mvn clean compile -DskipTests
+          echo "✅ Repository layer compilation completed"
+
       - name: Generate Repository Validation Report
         if: always()
         run: |
@@ -234,12 +201,4 @@ jobs:
           echo "JPA method declarations found: $jpa_methods"
           
           echo "✅ Repository validation completed successfully!"
-
-      - name: Upload Validation Results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: repository-validation-results
-          path: |
-            target/surefire-reports/
-            *.log 
+          echo "Note: Repository tests are executed in the dedicated unit-tests and integration-tests workflows" 
