--- a/.github/workflows/syntax-check.yml
+++ b/.github/workflows/syntax-check.yml
@@ -40,42 +40,10 @@ jobs:
       - name: Compile tests (syntax check for test files)
         run: mvn test-compile -DskipTests
 
-  test-suite:
-    name: Test Suite Check
-    runs-on: ubuntu-latest
-    needs: compilation-check
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Cache Maven dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven-
-
-      - name: Run test suite
-        run: mvn test
-
-      - name: Publish Test Results
-        uses: dorny/test-reporter@v1
+      - name: Generate Compilation Summary
         if: always()
-        with:
-          name: Test Suite
-          path: target/surefire-reports/*.xml
-          reporter: java-junit
-          fail-on-error: false
-
-      - name: Upload Test Reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-reports
-          path: target/surefire-reports/
+        run: |
+          echo "📊 Compilation Check Summary"
+          echo "✅ Main source compilation completed"
+          echo "✅ Test source compilation completed"
+          echo "Note: Actual test execution is handled by separate unit-tests and integration-tests workflows"
