config for postgres tests

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,15 +1,16 @@
 # Test profile configuration for CI/CD pipeline
 spring.application.name=spawn-test
 
-# Database Configuration - PostgreSQL for testing
-spring.datasource.url=jdbc:postgresql://localhost:5432/spawn_test
-spring.datasource.username=testuser
-spring.datasource.password=testpassword
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# Database Configuration - H2 in-memory for testing (MySQL-compatible mode)
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.h2.console.enabled=true
 
 # Mail Configuration (disabled for testing)
 spring.mail.host=localhost
@@ -33,12 +34,8 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.data.redis.R
 # Cache Configuration
 spring.cache.type=simple
 
-# Database Migration Configuration
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-on-migrate=true
-spring.flyway.repair=true
-spring.flyway.validate-on-migrate=false
+# Database Migration Configuration (disabled for testing since we use create-drop)
+spring.flyway.enabled=false
 
 # Logging Configuration
 logging.level.com.danielagapov.spawn=DEBUG
