edit github action config to not overwrite local config

--- a/.github/workflows/repository-validation.yml
+++ b/.github/workflows/repository-validation.yml
@@ -18,20 +18,7 @@ jobs:
     name: Repository Validation
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_PASSWORD: testpassword
-          POSTGRES_USER: testuser
-          POSTGRES_DB: spawn_test
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
+
 
     steps:
       - name: Checkout repository
@@ -53,7 +40,7 @@ jobs:
       - name: Install repository validation dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y postgresql-client ripgrep
+          sudo apt-get install -y ripgrep
 
       - name: Repository Static Analysis
         run: |
@@ -200,16 +187,14 @@ jobs:
 
       - name: Spring Boot Context Validation
         env:
-          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/spawn_test
-          SPRING_DATASOURCE_USERNAME: testuser
-          SPRING_DATASOURCE_PASSWORD: testpassword
-          SPRING_JPA_HIBERNATE_DDL_AUTO: validate
           SPRING_PROFILES_ACTIVE: test
         run: |
           echo "🚀 Validating Spring Boot context and JPA repository queries..."
           
-          # Create a minimal test to validate Spring context and repository queries
-          cat > src/test/java/com/danielagapov/spawn/RepositoryValidationTest.java << 'EOF'
+          # Check if RepositoryValidationTest exists, if not create a minimal one
+          if [ ! -f "src/test/java/com/danielagapov/spawn/RepositoryValidationTest.java" ]; then
+            echo "📝 Creating RepositoryValidationTest as it doesn't exist..."
+            cat > src/test/java/com/danielagapov/spawn/RepositoryValidationTest.java << 'EOF'
           package com.danielagapov.spawn;
           
           import org.junit.jupiter.api.Test;
@@ -220,9 +205,15 @@ jobs:
           @SpringBootTest
           @ActiveProfiles("test")
           @TestPropertySource(properties = {
+              "spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL;DB_CLOSE_DELAY=-1",
+              "spring.datasource.username=sa",
+              "spring.datasource.password=",
+              "spring.datasource.driver-class-name=org.h2.Driver",
+              "spring.jpa.database-platform=org.hibernate.dialect.H2Dialect",
               "spring.jpa.hibernate.ddl-auto=create-drop",
               "spring.jpa.show-sql=true",
-              "spring.jpa.properties.hibernate.format_sql=true"
+              "spring.jpa.properties.hibernate.format_sql=true",
+              "spring.profiles.active=test"
           })
           public class RepositoryValidationTest {
               
@@ -230,24 +221,21 @@ jobs:
               public void contextLoads() {
                   // This test will fail if there are any JPQL syntax errors
                   // Spring will validate all @Query annotations during context initialization
+                  // Success means all repository queries are syntactically correct
               }
           }
           EOF
+          else
+            echo "📝 Using existing RepositoryValidationTest..."
+          fi
           
           echo "📝 Running Spring Boot context validation test..."
           mvn test -Dtest="RepositoryValidationTest" -Dfailsafe.useSystemClassLoader=false
-          
-          # Clean up the temporary test file
-          rm -f src/test/java/com/danielagapov/spawn/RepositoryValidationTest.java
           
           echo "✅ Spring Boot context validation completed successfully"
 
       - name: Build and Test Repository Layer
         env:
-          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/spawn_test
-          SPRING_DATASOURCE_USERNAME: testuser
-          SPRING_DATASOURCE_PASSWORD: testpassword
-          SPRING_JPA_HIBERNATE_DDL_AUTO: create-drop
           SPRING_PROFILES_ACTIVE: test
         run: |
           echo "🚀 Building project and running repository tests..."
