--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,9 +37,10 @@ spring.cache.cache-names=ActivityById,fullActivityById,ActivitiesByOwnerId,feedA
 
 # Firebase Configuration for Android
 
-# Database Migration Configuration
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-on-migrate=true
-spring.flyway.repair=true
-spring.flyway.validate-on-migrate=false
+# Database Migration Configuration - DISABLED
+# Using Hibernate DDL auto-update instead of Flyway migrations
+spring.flyway.enabled=false
+# spring.flyway.locations=classpath:db/migration
+# spring.flyway.baseline-on-migrate=true
+# spring.flyway.repair=true
+# spring.flyway.validate-on-migrate=false
