--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,8 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.repair=true
 spring.flyway.validate-on-migrate=false
+
+# Twilio
+twilio.account-sid=${TWILIO_ACCOUNT_SID}
+twilio.auth-token=${TWILIO_AUTH_TOKEN}
+twilio.phone-number=${TWILIO_PHONE_NUMBER}
