handle lazy loading to prevent serialization errors

--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
             <artifactId>jwks-rsa</artifactId>
             <version>0.22.1</version>
         </dependency>
+        <!-- Jackson Hibernate module for handling lazy loading serialization -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate6</artifactId>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
