--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,17 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.repair=true
 spring.flyway.validate-on-migrate=false
+
+# Fuzzy Search Configuration
+# Jaro-Winkler algorithm configuration for user search
+fuzzy-search.similarity-threshold=0.6
+fuzzy-search.strict-similarity-threshold=0.8
+fuzzy-search.max-database-results=100
+fuzzy-search.max-final-results=10
+fuzzy-search.name-weight=1.0
+fuzzy-search.username-weight=1.0
+fuzzy-search.prefix-boost=1.2
+fuzzy-search.min-query-length=2
+fuzzy-search.case-insensitive=true
+fuzzy-search.enable-prefix-optimization=true
+fuzzy-search.enable-analytics=false
