--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ spring.cache.type=redis
 
 # Cache Configuration
 spring.cache.redis.time-to-live=3600000
-spring.cache.cache-names=ActivityById,fullActivityById,ActivitiesByOwnerId,feedActivities,filteredFeedActivities,ActivitiesInvitedTo,fullActivitiesInvitedTo,calendarActivities,allCalendarActivities
+spring.cache.cache-names=ActivityById,fullActivityById,ActivitiesByOwnerId,feedActivities,filteredFeedActivities,ActivitiesInvitedTo,fullActivitiesInvitedTo,calendarActivities,allCalendarActivities,userInterests,activityTypes,userStats,locations,friendRequests,userSocialMedia,locationById,activityTypesByUserId,userStatsById,friendRequestsByUserId,userSocialMediaByUserId
 
 # Firebase Configuration for Android
 
