security audit init

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,17 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>3.2.5</version>
         </dependency>
+        <!-- Add rate limiting dependency -->
+        <dependency>
+            <groupId>com.github.vladimir-bukhtoyarov</groupId>
+            <artifactId>bucket4j-core</artifactId>
+            <version>8.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.vladimir-bukhtoyarov</groupId>
+            <artifactId>bucket4j-redis</artifactId>
+            <version>8.7.0</version>
+        </dependency>
         <dependency>
             <groupId>com.google.firebase</groupId>
             <artifactId>firebase-admin</artifactId>
