--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>3.2.5</version>
         </dependency>
+        <!-- Apache Commons Pool2 for Redis connection pooling (RAM Optimization) -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.google.firebase</groupId>
             <artifactId>firebase-admin</artifactId>
