rm final from fcminitializer

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -34,6 +34,9 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.data.redis.R
 # Cache Configuration
 spring.cache.type=simple
 
+# Disable Redis connection pooling in tests (Redis is not used)
+spring.data.redis.lettuce.pool.enabled=false
+
 # Database Migration Configuration (disabled for testing since we use create-drop)
 spring.flyway.enabled=false
 
