--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -34,6 +34,9 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.data.redis.R
 # Cache Configuration
 spring.cache.type=simple
 
+# Disable Redis connection pooling in dev (Redis is not used)
+spring.data.redis.lettuce.pool.enabled=false
+
 # Database Migration Configuration
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
