--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,8 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### MacOS ###
 src/main/.DS_Store
 src/main/resources/.DS_Store
 src/main/resources/Guides/.DS_Store
