--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <release>17</release>
                     <parameters>true</parameters>
                     <annotationProcessorPaths>
                         <path>
