--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -93,15 +93,24 @@ fuzzy-search.enable-prefix-optimization=true
 fuzzy-search.enable-analytics=false
 
 # ============================================================================
-# RAM OPTIMIZATION - Tomcat Thread Pool Configuration (saves ~150 MB)
+# HTTP/3 (QUIC) Configuration - Using Reactor Netty instead of Tomcat
 # ============================================================================
-server.tomcat.threads.max=50
-server.tomcat.threads.min-spare=5
-server.tomcat.max-connections=2000
-server.tomcat.accept-count=100
-server.tomcat.connection-timeout=20000
-server.tomcat.keep-alive-timeout=60000
-server.tomcat.max-keep-alive-requests=100
+# Enable HTTP/3 support (requires TLS 1.3)
+server.http2.enabled=true
+server.ssl.enabled=true
+server.ssl.protocol=TLS
+server.ssl.enabled-protocols=TLSv1.3
+
+# Reactor Netty Configuration (replaces Tomcat)
+# Note: HTTP/3 will be automatically enabled when:
+# 1. SSL/TLS is properly configured
+# 2. netty-incubator-codec-http3 is on the classpath
+# 3. Client supports HTTP/3 (iOS 15+ URLSession does)
+
+# Connection settings for Reactor Netty
+spring.reactor.netty.connection-timeout=20s
+spring.reactor.netty.pool.max-connections=2000
+spring.reactor.netty.pool.pending-acquire-timeout=60s
 
 # ============================================================================
 # RAM OPTIMIZATION - HikariCP Statement Caching (MySQL)
