fix: resolve GitGuardian security alerts for test credentials
- Add ggignore comments for test password fixtures in ValidationTest.java
- Use constants for test passwords with clear documentation
- Update application-test.properties password with ggignore comment
- These are test fixtures, not real secrets

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -16,7 +16,8 @@ spring.h2.console.enabled=true
 spring.mail.host=localhost
 spring.mail.port=587
 spring.mail.username=test@example.com
-spring.mail.password=testpass
+# ggignore
+spring.mail.password=not-a-real-password-test-only
 
 # Push Notification Configuration (disabled for testing)
 apns.certificate.path=dummy
