shared libs (DTOs, exceptions, logging, etc.), feign client from auth->user service + redis events (to be replaced by rabbitmq

--- a/services/auth-service/src/main/resources/application.properties
+++ b/services/auth-service/src/main/resources/application.properties
@@ -4,9 +4,11 @@ server.port=8081
 # ============================================================================
 # Database Configuration
 # ============================================================================
-spring.datasource.url=${MYSQL_URL}
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
+# AUTH_DB_URL: Separate auth database for email_verification, user_id_external_id_map tables.
+# Falls back to MYSQL_URL for backward compatibility during migration.
+spring.datasource.url=${AUTH_DB_URL:${MYSQL_URL}}
+spring.datasource.username=${AUTH_DB_USER:${MYSQL_USER}}
+spring.datasource.password=${AUTH_DB_PASSWORD:${MYSQL_PASSWORD}}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # HikariCP Connection Pool
@@ -44,9 +46,41 @@ apple.client.id=${APPLE_CLIENT_ID}
 jwt.signing-secret=${SIGNING_SECRET:}
 
 # ============================================================================
+# Redis (Cross-Service Pub/Sub Events)
+# ============================================================================
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.password=${REDIS_PASSWORD:}
+
+# ============================================================================
+# Inter-Service Communication
+# ============================================================================
+# Monolith base URL for Feign client calls (user lookup, etc.)
+services.monolith.url=${MONOLITH_URL:http://localhost:8080}
+
+# ============================================================================
+# Resilience4j Circuit Breaker Configuration
+# ============================================================================
+resilience4j.circuitbreaker.instances.monolith.register-health-indicator=true
+resilience4j.circuitbreaker.instances.monolith.sliding-window-size=10
+resilience4j.circuitbreaker.instances.monolith.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.monolith.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.monolith.wait-duration-in-open-state=30s
+resilience4j.circuitbreaker.instances.monolith.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.monolith.automatic-transition-from-open-to-half-open-enabled=true
+
+resilience4j.timelimiter.instances.monolith.timeout-duration=5s
+
+# ============================================================================
 # Server Configuration
 # ============================================================================
 server.tomcat.threads.max=25
 server.tomcat.threads.min-spare=2
 server.tomcat.max-connections=1000
 server.tomcat.connection-timeout=20000
+
+# ============================================================================
+# Actuator (Health Checks)
+# ============================================================================
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
