--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -110,3 +110,9 @@ spring.datasource.hikari.data-source-properties.cachePrepStmts=true
 spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
 spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
 spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
+
+# ============================================================================
+# Actuator (Health Checks & Monitoring)
+# ============================================================================
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
